--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -7,9 +7,8 @@ on:
     branches: [ "main" ]
 
   workflow_dispatch:
-
 jobs:
-  Snyk:
+  SCA:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
@@ -20,8 +19,24 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN  }}
         ORG_ID: e5d6cf84-a29f-42ed-b73a-731d727d8853
       with:
-        args: --sarif-file-output=snyk.sarif
+        args: --sarif-file-output=test.sarif
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v2
       with:
-        sarif_file: snyk.sarif
+        sarif_file: test.sarif
+  SAST:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@master
+    - name: sast
+      uses: snyk/actions/code@master
+      continue-on-error: true
+      env:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN  }}
+        ORG_ID: e5d6cf84-a29f-42ed-b73a-731d727d8853
+      with:
+        args: --sarif-file-output=code.sarif
+    - name: Upload result to GitHub Code Scanning
+      uses: github/codeql-action/upload-sarif@v2
+      with:
+        sarif_file: code.sarif
