--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -12,7 +12,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@master
-    - name: sast
+    - name: SCA
       uses: snyk/actions/python@master
       continue-on-error: true
       env:
@@ -35,6 +35,7 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN  }}
       with:
         args: --sarif-file-output=code.sarif
+        command: code
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v2
       with:
