--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -34,9 +34,9 @@ jobs:
       env:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN  }}
       with:
-        args: --sarif-file-output=code.sarif
+  #      args: --sarif-file-output=code.sarif
         command: code
-    - name: Upload result to GitHub Code Scanning
-      uses: github/codeql-action/upload-sarif@v2
-      with:
-        sarif_file: code.sarif
+  #  - name: Upload result to GitHub Code Scanning
+   #   uses: github/codeql-action/upload-sarif@v2
+    #  with:
+     #   sarif_file: code.sarif
