--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -35,7 +35,7 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN  }}
       with:
   #      args: --sarif-file-output=code.sarif
-        command: code
+        command: code test
   #  - name: Upload result to GitHub Code Scanning
    #   uses: github/codeql-action/upload-sarif@v2
     #  with:
