--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -20,10 +20,16 @@ jobs:
         ORG_ID: e5d6cf84-a29f-42ed-b73a-731d727d8853
       with:
         args: --sarif-file-output=test.sarif
+        command: snyk test --json > sca_output.json
     - name: Upload result to GitHub Code Scanning
       uses: github/codeql-action/upload-sarif@v2
       with:
         sarif_file: test.sarif
+    - name: Store results to JSON
+      uses: actions/upload-artifact@v2
+      with:
+        name: sca-json-output
+        path: sca_output.json
   SAST:
     runs-on: ubuntu-latest
     steps:
@@ -45,3 +51,25 @@ jobs:
       with:
         name: sast-json-output
         path: sast_output.json
+  IaC:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - name: Run Snyk to check Kubernetes manifest file for issues
+        uses: snyk/actions/iac@master
+        continue-on-error: true
+        env:
+          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN }}
+        with:
+          file: your/kubernetes-manifest.yaml your/terraform/directory
+          args: --sarif-file-output=iac.sarif
+          command: snyk iac test --json > iac_output.json
+      - name: Upload result to GitHub Code Scanning
+        uses: github/codeql-action/upload-sarif@v2
+        with:
+          sarif_file: iac.sarif
+      - name: Store results to JSON
+        uses: actions/upload-artifact@v2
+        with:
+          name: iac-json-output
+          path: iac_output.json
