--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -19,14 +19,14 @@ jobs:
         SNYK_TOKEN: ${{ secrets.SNYK_TOKEN  }}
         ORG_ID: e5d6cf84-a29f-42ed-b73a-731d727d8853
       with:
-        args: --sarif-file-output=test.sarif
-   #     command: snyk test --json > sca_output.json
-    - name: Upload result to GitHub Code Scanning
-      uses: github/codeql-action/upload-sarif@v2
-      with:
-        sarif_file: test.sarif
+        #args: --sarif-file-output=test.sarif
+        command: snyk test --json > sca_output.json
+    #- name: Upload result to GitHub Code Scanning
+    #  uses: github/codeql-action/upload-sarif@v2
+    #  with:
+     #   sarif_file: test.sarif
     - name: Store results to JSON
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: sca-json-output
         path: sca_output.json
@@ -47,7 +47,7 @@ jobs:
       with:
         sarif_file: code.sarif
     - name: Store results to JSON
-      uses: actions/upload-artifact@v2
+      uses: actions/upload-artifact@v3
       with:
         name: sast-json-output
         path: sast_output.json
@@ -69,7 +69,7 @@ jobs:
         with:
           sarif_file: iac.sarif
       - name: Store results to JSON
-        uses: actions/upload-artifact@v2
+        uses: actions/upload-artifact@v3
         with:
           name: iac-json-output
           path: iac_output.json
