--- a/.github/workflows/add_secret.yml
+++ b/.github/workflows/add_secret.yml
@@ -16,6 +16,6 @@ jobs:
     steps:
       - name: add secrets
         run: |
-          gh secret set "Test_Snyk_API" --body "${{ "testing" }}" --repo jamobegbie/${{ inputs.repository }}
+          gh secret set "Test_Snyk_API" --body "${{ inputs.GCP_CREDENTIALS }}" --repo jamobegbie/${{ inputs.repository }}
         env:
           GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
