--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,10 +1,7 @@
 name: Snyk
 
 on:
-  workflow_dispatch:
-    inputs:
-      targetRepo:
-        description: 'Repository to scan (in owner/repo format)'
+  workflow_call:
 jobs:
   SCA:
     runs-on: ubuntu-latest
