--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -1,50 +1,8 @@
 name: Snyk
 
 on:
-  workflow_call:
+  workflow_dispatch:
 jobs:
-  SCA:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: SCA
-      uses: snyk/actions/gradle@master
-      continue-on-error: true
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN  }}
-        ORG_ID: e5d6cf84-a29f-42ed-b73a-731d727d8853
-      with:
-        args: --sarif-file-output=test.sarif
-        command: test --json > sca_output.json
-    - name: Upload result to GitHub Code Scanning
-      uses: github/codeql-action/upload-sarif@v2
-      with:
-        sarif_file: test.sarif
-    - name: Store results to JSON
-      uses: actions/upload-artifact@v3
-      with:
-        name: sca-json-output
-        path: sca_output.json
-  SAST:
-    runs-on: ubuntu-latest
-    steps:
-    - uses: actions/checkout@master
-    - name: sast
-      uses: snyk/actions/gradle@master
-      continue-on-error: true
-      env:
-        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN  }}
-      with:
-        entryPoint: ${{ github.event.inputs.targetRepo }}
-        args: --sarif-file-output=code.sarif
-        command: code test --json > sast_output.json
-    - name: Upload result to GitHub Code Scanning
-      uses: github/codeql-action/upload-sarif@v2
-      with:
-        sarif_file: code.sarif
-    - name: Store results to JSON
-      uses: actions/upload-artifact@v3
-      with:
-        name: sast-json-output
-        path: sast_output.json
-
+  microservice-snyk:
+    uses: jamobegbie/django.nv/.github/workflows/snyk.yml@v0
+    
