--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -5,4 +5,6 @@ on:
 jobs:
   microservice-snyk:
     uses: jamobegbie/django.nv/.github/workflows/snyk.yml@v1
+    env:
+      SNYK_TOKEN: ${{ secrets.SNYK_TOKEN  }}
     
