--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -4,9 +4,7 @@ on:
   workflow_dispatch:
 jobs:
   microservice-snyk:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: jamobegbie/django.nv/.github/workflows/snyk.yml@v1
-      - with:
-          SNYK_TOKEN: ${{ secrets.SNYK_TOKEN  }}
+      uses: jamobegbie/django.nv/.github/workflows/snyk.yml@v1
+      with:
+        SNYK_TOKEN: ${{ secrets.SNYK_TOKEN  }}
     
