--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -10,6 +10,6 @@ jobs:
         uses: actions/checkout@v2
       
       - name: Run Snyk checks
-        uses: jamobegbie/django.nv/.github/workflows/snyk@main
+        uses: jamobegbie/django.nv/.github/workflows/snyk.yml@main
         with:
           snyk-token: ${{ secrets.SNYK_TOKEN }}
