--- a/.github/workflows/snyk.yml
+++ b/.github/workflows/snyk.yml
@@ -4,13 +4,5 @@ on:
   workflow_dispatch:
 
 jobs:
-  microservice-snyk:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v2
-      
-      - name: Run Snyk checks
-        uses: jamobegbie/django.nv/.github/actions/snyk-auth/actions.yml@main
-        with:
-          snyk-token: ${{ secrets.SNYK_TOKEN }}
+  microservice-snyk:      
+        uses: jamobegbie/django.nv/.github/workflows/snyk.yml@main
